# bilibili-api-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  test-user.sh
.github/workflows/: publish.yml  rust.yml
.m4/: wrap_json.m4
bilibili-api-rs/: Cargo.toml
bilibili-api-rs/examples/: user.rs
bilibili-api-rs/src/: cred_data.json  cred_data_54ef.txt  cred_utils.rs  lib.rs  wbi.rs  wbi_oe.json
bilibili-api-rs/src/api_info/: credential.json  live.json  unstable.json  user.json  video.json  xlive.json
examples/: bevy-task.rs  user.rs  vup-living-list.rs
script/: bump.mak  pre-push  sync_api_json
src/: cache.rs  error.rs  lib.rs  net.rs  plugin.rs  wbi.rs
src/api/: mod.rs  user.rs  xlive.rs
src/api_info/: credential.json  live.json  live.rs  mod.rs  user.json  user.rs  video.json  video.rs  xlive.json
src/wbi/: mod.rs
tests/: user_api_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
