[package]
name = "bilibili-api-rs"
version = "0.3.0"
authors = ["lifeich1 <lintd23@outlook.com>"]
edition = "2018"
description = "A rust library project got inspiration from Passkou/bilibili-api"
license = "WTFPL"
repository = "https://github.com/lifeich1/bilibili-api-rs"
exclude = ["/.m4", "/script"]
categories = ["web-programming::http-client"]
readme = "README.md"
keywords = ["bilibili"]


[dependencies]
reqwest = { version = "0.11", features = ["json"] }

anyhow = "1.0"
serde_json = "1"
lazy_static = "1.4"
serde = "1.0"
log = "0.4"


bevy = { version = "0.5", features = [], optional = true }
futures-lite = { version = "1.11.3", optional = true }

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
]


[dev-dependencies]
simple_logger = "1.11"
chrono = "0.4"


[features]
plugin = ["bevy", "futures-lite"]


[[example]]
name = "bevy-task"
required-features = ["plugin"]
