[package]
name = "bilibili-api-rs"
version = "0.3.0"
authors = ["lifeich1 <lintd23@outlook.com>"]
edition = "2021"
description = "A rust library project got inspiration from Passkou/bilibili-api"
license = "WTFPL"
repository = "https://github.com/lifeich1/bilibili-api-rs"
exclude = ["/.m4", "/script"]
categories = ["web-programming::http-client"]
readme = "README.md"
keywords = ["bilibili"]


[dependencies]
reqwest = { version = "0.11", features = ["json"] }

anyhow = "1.0"
serde_json = "1"
serde = "1.0"
rpds = { version = "0.13", features = ["serde"] }
chrono = "0.4"
md5 = "0.7"

[dev-dependencies]
tokio = { version = "1.28", features = ["rt", "macros"] }
