[package]
name = "bilibili-api-rs"
version = "0.3.4"
authors = ["lifeich1 <lintd23@outlook.com>"]
edition = "2021"
description = "A rust library project got inspiration from Passkou/bilibili-api"
license = "WTFPL"
repository = "https://github.com/lifeich1/bilibili-api-rs"
categories = ["web-programming::http-client"]
readme = "../README.md"
keywords = ["bilibili"]


[dependencies]
reqwest = "0.11"
anyhow = "1.0"
serde_json = "1"
serde = "1.0"
rpds = { version = "0.13", features = ["serde"] }
chrono = "0.4"
md5 = "0.7"
log = "0.4"
uuid = { version = "1.3", features = ["rng", "v1"] }
regex = "1.8.4"

[dev-dependencies]
tokio = { version = "1.28", features = ["rt", "macros", "rt-multi-thread"] }
stderrlog = "0.5"
env_logger = "0.10.0"
lazy_static = "1.4.0"

[[example]]
name = "user"
